# abcli

./: .gitignore  CONFIG.md  INSTALL.md  README.md  TESTING.md  UI.md  USAGE.md  config.example.yaml  lint.sh  pyproject.toml
.github/workflows/: ci.yml  nightly.yaml
ab_cli/: __init__.py
ab_cli/abui/: __init__.py  app.py
ab_cli/abui/views/: chat.py  (+3 more)
ab_cli/api/: __init__.py  auth.py  client.py  exceptions.py  pagination.py
ab_cli/cli/: __init__.py  agents.py  auth.py  client_utils.py  common_options.py  configure.py  invoke.py  main.py  pagination_utils.py  profiles.py  resources.py  ui.py  versions.py
ab_cli/config/: __init__.py  exceptions.py  loader.py  settings.py
ab_cli/models/: __init__.py  agent.py  collection.py  invocation.py  resources.py
ab_cli/services/: __init__.py  agent_service.py  collection_service.py  invocation_service.py  resource_service.py  version_service.py
ab_cli/utils/: __init__.py  audit.py  csv_parser.py  editor.py  jsonl_handler.py  tempfile_manager.py  version.py
doc/: CONFIG.md  INSTALL.md  README.md  TESTING.md  UI.md  USAGE.md
nightly/: build_binaries.py
nightly/posix/: install.sh
nightly/win/: install.ps1
scripts/: install.ps1  install.sh
specs/: 00-draft-spec.md  01-foundation.md  02-agent-management.md  03-agent-invocation.md  04-agent-invocation-improvements.md  05-resource-listing.md  06-documentation-updates.md  07-test-coverage-ci.md  08-UI.md  09-invoke-command-enhancements.md  10-UI refactoring.md  10-UI-refactoring.md  11-Testing-UI.md  12-CI-improvements.md  13-UI-Chat.md  14-CLI-improvements.md  15-CLI-fixes.md  16-Call-Task_Agents-Via-UI.md  17-verbose-mode-consistency.md  18-Interactive-mode.md  19-list-and-pagination.md  20-ui-version-support.md  21-fix-agents-table-display.md  22-config-init.md  24-openapi-1.1-migration.md  25-enhanced-chat-response-display.md  26-ui-navigation-and-json-viewers.md  27-cli-test-coverage-improvements.md  28-UI-direct-data-provider.md  29-profiles.md  30-UI-profile.md  31-collect.md  32-auth-curl.md  33-Doc-update.md  34-show-config-and-profiles.md  35-source-build-scripts.md  36-agent-edit.md  37-AgentTypes-inconsistencies.md  38-UI-bug-fixes.md  openapi.json  (+1 more)
tests/: __init__.py
tests/data/: config-provider-cli.yaml  config-provider-direct.yaml  config-provider-mock.yaml  config-with-provider-and-profiles.yaml  test_agent_config.json
tests/integration/: __init__.py  integration_tests.py
tests/test_abui/: README.md  __init__.py  conftest.py  streamlit_test_wrapper.py  test_agent_creation_editing.py  test_agent_details.py  test_agent_details_view_extended.py  test_agent_edit_validation.py  test_agents_list.py  test_agents_view_functions.py  test_chat_view.py  test_data_provider.py  test_debug_app.py  test_debug_elements.py  test_provider_factory.py  test_test_data_provider.py
tests/test_api/: test_auth.py  test_client.py  test_invoke.py  test_pagination.py
(+58 files in other folders)
